Bug 1202024 - Initialize plugin details and quirks in parent on first run for async init. r=aklotz, a=sylvestre